# Android-vtk-skeleton

./: README.md  build-vtk-android.sh
mobile/: CMakeLists.txt  build.gradle
mobile/src/androidTest/java/com/example/spherik/myapplication/: ExampleInstrumentedTest.java
mobile/src/main/: AndroidManifest.xml
mobile/src/main/cpp/: native-lib.cpp
mobile/src/main/java/com/example/spherik/myapplication/: MainActivity.java  NativeLib.java  VtkView.java
mobile/src/main/res/layout/: activity_main.xml
mobile/src/test/java/com/example/spherik/myapplication/: ExampleUnitTest.java
tv/: build.gradle
tv/src/main/: AndroidManifest.xml
tv/src/main/cpp/: main.cpp  native-lib.cpp
tv/src/main/java/com/example/spherik/myapplication/: MainActivity.java
tv/src/main/res/layout/: activity_main.xml  sample_vtk_view.xml
tv/src/main/res/values/: attrs_vtk_view.xml  strings.xml
